# bp_osd

./: README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_bp_methods.ipynb  benchmark_bp_osd.ipynb
bp_osd/: __init__.py  bp_osd.py
src/: __init__.py  bp_osd.py
tests/: test_bp_osd.py
