[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = "==3.8.12"
name = "bp_osd"
description = "Belief-Propagation with Ordered Statistics Decoding post-processing" 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "ldpc==0.1.50",
    "stim==1.12.0",
    "numpy==1.24.4",
    "scipy==1.10.1",
    "tqdm==4.66.1",
]
keywords = ["quantum", "error correction", "bp", "decoder", "osd"]

[tools.setuptools]
packages = ["bp_osd"]

[project.optional-dependencies]
dev = ["pip-tools"]
