[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.8.12"
name = "bp_osd"
description = "Belief-Propagation with Ordered Statistics Decoding post-processing" 
version = "0.1.0"
authors = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
maintainers = [
    { name = "Marc Serra Peralta", email = "marcserraperalta@gmail.com" }
]
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "ldpc",
    "stim",
    "numpy",
    "scipy",
    "tqdm",
]
keywords = ["quantum", "error correction", "bposd", "decoder", "bp-osd"]

[project.optional-dependencies]
dev = ["pip-tools", "pytest", "pymatching"]
